chore: fix overflow on small screens

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,9 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  overflow-x: hidden;
-}
 ::selection {
   background: rgba(147, 130, 255, 0.5);
   color: #fff;
